--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\title{Folded Paper Illusions}
+\title{Folded Paper Illusions, Squaring the Circle}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
@@ -25,19 +25,29 @@ Access Desmos interactives through the online version of this text at
 
 
 
-
-\section*{Cube and Sphere}
+\section{Cube and Sphere}
 
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{a562c21711}{900}{600}
+\desmosThreeD{oagn6yxvnp}{900}{600}
 \end{center}
 \end{onlineOnly}
 
- 
 
-Activity available at  \href{https://www.desmos.com/3d/a562c21711}{163: Folded Paper Illusions 2}
+Activity available at  \href{https://www.desmos.com/3d/oagn6yxvnp}{163: Folded Paper Illusions 3}
+
+\section{Squaring the Circle in a Mirror}
+
+\href{https://digitaleditions.sheridan.com/article/Squaring+the+Circle+in+a+Mirror/3642879/655908/article.html}{Squaring the Circle in a Mirror} 
+
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{uyzjdhynrc}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/uyzjdhynrc}{Circle or Square 2}
 
 
 \end{document}
