--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -320,6 +320,22 @@ From the pespective of a Math 151 student, the quadratic formula gives these dir
 \href{https://www.desmos.com/calculator/j980gbvqm6}{Calculus and the Quadratic Formula 23}
 
 
+\section{Integration and the Quadratic Formula}
+
+
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmos{qpkh9mmjty}{450}{600} 
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+\href{https://www.desmos.com/calculator/qpkh9mmjty}{Quadratic Formula and Integration}
+
+
+
+
 
 \section{Cylinder}
 
