--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -49,5 +49,7 @@ Activity available at  \href{https://www.desmos.com/3d/oagn6yxvnp}{163: Folded P
 
 \href{https://www.desmos.com/3d/uyzjdhynrc}{Circle or Square 2}
 
+\href{https://www.instagram.com/reel/Cvcdz7Rrm7i/}{Instagram}
+
 
 \end{document}
